[gd_scene load_steps=29 format=3 uid="uid://b2g2g5qs5u3uq"]

[ext_resource type="Script" path="res://Scripts/controlador.gd" id="1_oo0au"]
[ext_resource type="Script" path="res://camera_2d.gd" id="1_qkg2u"]
[ext_resource type="Texture2D" uid="uid://bm4kwwkirshft" path="res://SpritesEImagenes/Background_000.PNG" id="1_t2ft1"]
[ext_resource type="Texture2D" uid="uid://lolh22xcckyx" path="res://SpritesEImagenes/Foreground_001.png" id="2_8ty5o"]
[ext_resource type="Texture2D" uid="uid://3a8mk86f3bpl" path="res://SpritesEImagenes/Flippers_back.PNG" id="3_jojq8"]
[ext_resource type="PhysicsMaterial" uid="uid://pg8xofhxdbpf" path="res://Materiales/MaterialBola.tres" id="3_xnwj3"]
[ext_resource type="PackedScene" uid="uid://c6oopqspos50b" path="res://Bola.tscn" id="4_dibcs"]
[ext_resource type="Texture2D" uid="uid://0m23qcwv2kts" path="res://SpritesEImagenes/Flippers_front.PNG" id="4_s8e72"]
[ext_resource type="PackedScene" uid="uid://xr5nkxp270v6" path="res://FLipperIzq.tscn" id="6_3508n"]
[ext_resource type="Texture2D" uid="uid://bjplico4lqvd0" path="res://SpritesEImagenes/Ball.PNG" id="9_2qdne"]
[ext_resource type="PackedScene" uid="uid://cp6dxvnydoowu" path="res://moneda.tscn" id="10_h5ipg"]
[ext_resource type="FontFile" uid="uid://bulxv5pcbs8k4" path="res://Fuentes/Pixelizada0limpi.ttf" id="11_uj6mw"]
[ext_resource type="Texture2D" uid="uid://dqy7v8ewvq2q1" path="res://SpritesEImagenes/MonedaInterfaz.png" id="12_br58p"]
[ext_resource type="Texture2D" uid="uid://jhgp83d0ekoe" path="res://SpritesEImagenes/BolaInterfaz.png" id="12_dprqm"]
[ext_resource type="FontFile" uid="uid://crp7hg5h51f30" path="res://Fuentes/PixelizadaNUMERO (2).ttf" id="13_iew4x"]
[ext_resource type="Texture2D" uid="uid://dn6j0tpdi8d0l" path="res://SpritesEImagenes/Panel_tactil_despliegue.png" id="16_vppab"]
[ext_resource type="Script" path="res://Scripts/panel_tactil.gd" id="17_gb88t"]
[ext_resource type="Texture2D" uid="uid://cfyki8isyo7il" path="res://SpritesEImagenes/DedoTactil.png" id="18_7hbk3"]
[ext_resource type="Script" path="res://Scripts/dedo_sombra.gd" id="19_b8cp1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfxin"]
size = Vector2(46, 376)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_scp5n"]
resource_local_to_scene = true
friction = 0.02
bounce = 0.2

[sub_resource type="AtlasTexture" id="AtlasTexture_fupwm"]
atlas = ExtResource("18_7hbk3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8jyf"]
atlas = ExtResource("18_7hbk3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxqgy"]
atlas = ExtResource("18_7hbk3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1t3b"]
atlas = ExtResource("18_7hbk3")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iis4u"]
atlas = ExtResource("18_7hbk3")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0son4"]
atlas = ExtResource("18_7hbk3")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_1qykj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fupwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8jyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1t3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iis4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0son4")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[node name="Node2D" type="Node"]

[node name="Controlador" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_oo0au")

[node name="Pinball" type="Node2D" parent="."]

[node name="Fondo" type="Node2D" parent="Pinball"]

[node name="FondoSprite" type="Sprite2D" parent="Pinball/Fondo"]
texture_filter = 3
texture = ExtResource("1_t2ft1")

[node name="Paredes" type="Node2D" parent="Pinball"]
z_index = 10
texture_filter = 3
position = Vector2(0, -1)

[node name="ParedesSprite" type="Sprite2D" parent="Pinball/Paredes"]
texture = ExtResource("2_8ty5o")

[node name="Paredes" type="StaticBody2D" parent="Pinball/Paredes"]
physics_interpolation_mode = 1
z_index = 10
texture_filter = 3
disable_mode = 1
physics_material_override = ExtResource("3_xnwj3")

[node name="ParteInferiorIzq" type="CollisionPolygon2D" parent="Pinball/Paredes/Paredes"]
position = Vector2(-75.1317, 285.254)
scale = Vector2(10.3101, 7.95899)
build_mode = 1
polygon = PackedVector2Array(-16.5729, -14.6066, -16.5729, -13.4758, -16.5729, -13.3502, -16.4759, -13.0989, -16.3789, -12.9732, -16.2819, -12.8476, -16.0879, -12.722, -15.8939, -12.5963, 1.46766, -5.05767, 1.46765, -5.05767, 1.07968, -4.80638, 0.8857, -4.42945, 0.691716, -3.92687, 0.8857, -2.79607, 1.27367, -2.41914, 1.66164, -2.16785, 1.66164, 3.73742, -21.0345, 3.73742, -21.0345, -14.9836, -16.5729, -14.9836)

[node name="ParteInferiorDer" type="CollisionPolygon2D" parent="Pinball/Paredes/Paredes"]
position = Vector2(75.132, 285.254)
scale = Vector2(10.31, 7.959)
polygon = PackedVector2Array(16.573, -14.607, 16.573, -13.476, 16.573, -13.35, 16.476, -13.099, 16.379, -12.973, 16.282, -12.848, 16.088, -12.722, 15.894, -12.596, -1.4677, -5.05767, -1.468, -5.058, -1.08, -4.806, -0.886, -4.429, -0.692, -3.927, -0.886, -2.796, -1.274, -2.419, -1.662, -2.168, -1.662, 3.737, 21.035, 3.737, 21.035, -14.984, 16.573, -14.984)

[node name="LateralIzquierdo" type="CollisionShape2D" parent="Pinball/Paredes/Paredes"]
position = Vector2(-269, -17)
shape = SubResource("RectangleShape2D_bfxin")

[node name="LateralDerecho" type="CollisionShape2D" parent="Pinball/Paredes/Paredes"]
position = Vector2(269, -17)
scale = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_bfxin")

[node name="ParteSuperiorIzq" type="CollisionPolygon2D" parent="Pinball/Paredes/Paredes"]
build_mode = 1
polygon = PackedVector2Array(-245, -159, -244, -181, -242, -191, -238, -200, -233, -210, -227, -219, -219, -228, -208, -237, -196, -245, -182, -250, -165, -254, 54, -254, 54, -297, -292, -297, -292, -159)

[node name="ParteSuperiorDer" type="CollisionPolygon2D" parent="Pinball/Paredes/Paredes"]
scale = Vector2(-1, 1)
build_mode = 1
polygon = PackedVector2Array(-245, -159, -244, -181, -242, -191, -238, -200, -233, -210, -227, -219, -219, -228, -208, -237, -196, -245, -182, -250, -165, -254, 54, -254, 54, -297, -292, -297, -292, -159)

[node name="FlipperIzquierdoTraseroSprite" type="Node2D" parent="Pinball"]
visible = false
texture_filter = 3
position = Vector2(-2.5, 1.5)

[node name="FlipperSprite" type="Sprite2D" parent="Pinball/FlipperIzquierdoTraseroSprite"]
position = Vector2(-37, 234)
texture = ExtResource("3_jojq8")
flip_h = true
hframes = 4
vframes = 2

[node name="FlipperIzquierdoDelanteroSprite2" type="Node2D" parent="Pinball"]
visible = false
z_index = 6
texture_filter = 3
position = Vector2(2.5, 1.5)

[node name="FlipperSprite" type="Sprite2D" parent="Pinball/FlipperIzquierdoDelanteroSprite2"]
position = Vector2(-37, 234)
texture = ExtResource("4_s8e72")
flip_h = true
hframes = 4
vframes = 2

[node name="FlipperIzq" parent="Pinball" instance=ExtResource("6_3508n")]
position = Vector2(-58, 255)

[node name="FlipperDer" parent="Pinball" instance=ExtResource("6_3508n")]
position = Vector2(58, 255)
scale = Vector2(-1, 1)

[node name="Bola" parent="Pinball" instance=ExtResource("4_dibcs")]
unique_name_in_owner = true
z_index = 2
position = Vector2(-136, 101)
physics_material_override = SubResource("PhysicsMaterial_scp5n")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonIzq" type="TouchScreenButton" parent="Control"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
position = Vector2(-1392, -658)
scale = Vector2(32.9524, 56.1429)
texture_normal = ExtResource("9_2qdne")
passby_press = true
action = "ui_left"

[node name="ButtonDer" type="TouchScreenButton" parent="Control"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
position = Vector2(4.76837e-07, -480)
scale = Vector2(37.5476, 46)
texture_normal = ExtResource("9_2qdne")
passby_press = true
action = "ui_right"

[node name="ButtonIzqLanzar" type="TouchScreenButton" parent="Control"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
position = Vector2(-232, 120)
scale = Vector2(2.66667, 3.80952)
texture_normal = ExtResource("9_2qdne")
passby_press = true
action = "L1"

[node name="ButtonDerLanzar" type="TouchScreenButton" parent="Control"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
position = Vector2(97.69, 120)
scale = Vector2(2.66667, 3.80952)
texture_normal = ExtResource("9_2qdne")
passby_press = true
action = "R1"

[node name="Moneda_01" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(-48, -16)

[node name="Moneda_02" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(-16, -16)

[node name="Moneda_03" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(16, -16)

[node name="Moneda_04" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(48, -16)

[node name="Moneda_05" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(-48, 16)

[node name="Moneda_06" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(-16, 16)

[node name="Moneda_07" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(16, 16)

[node name="Moneda_08" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(48, 16)

[node name="Moneda_09" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(-48, 48)

[node name="Moneda_10" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(-16, 48)

[node name="Moneda_11" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(16, 48)

[node name="Moneda_12" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(48, 48)

[node name="Moneda_13" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(-80, -16)

[node name="Moneda_14" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(-80, 16)

[node name="Moneda_15" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(-80, 48)

[node name="Moneda_16" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(80, -16)

[node name="Moneda_17" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(80, 16)

[node name="Moneda_18" parent="." instance=ExtResource("10_h5ipg")]
position = Vector2(80, 48)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Puntos" type="Label" parent="CanvasLayer"]
z_index = 55
z_as_relative = false
y_sort_enabled = true
texture_filter = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -183.0
offset_top = -18.0
offset_right = -23.0
offset_bottom = 14.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(183, 18)
theme_override_fonts/font = ExtResource("11_uj6mw")
theme_override_font_sizes/font_size = 16
text = "000.001.200"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="PuntosSombra" type="Label" parent="CanvasLayer/Puntos"]
self_modulate = Color(0, 0, 0, 1)
z_index = -65
z_as_relative = false
y_sort_enabled = true
texture_filter = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -159.0
offset_top = -32.0
offset_right = 1.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("11_uj6mw")
theme_override_font_sizes/font_size = 16
text = "000.001.200"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="PuntosSombra2" type="Label" parent="CanvasLayer/Puntos"]
self_modulate = Color(0, 0, 0, 1)
z_index = -65
z_as_relative = false
y_sort_enabled = true
texture_filter = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -161.0
offset_top = -32.0
offset_right = -1.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("11_uj6mw")
theme_override_font_sizes/font_size = 16
text = "000.001.200"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="PuntosSombra3" type="Label" parent="CanvasLayer/Puntos"]
self_modulate = Color(0, 0, 0, 1)
z_index = -65
z_as_relative = false
y_sort_enabled = true
texture_filter = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -33.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("11_uj6mw")
theme_override_font_sizes/font_size = 16
text = "000.001.200"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="PuntosSombra4" type="Label" parent="CanvasLayer/Puntos"]
self_modulate = Color(0, 0, 0, 1)
z_index = -65
z_as_relative = false
y_sort_enabled = true
texture_filter = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -31.0
offset_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("11_uj6mw")
theme_override_font_sizes/font_size = 16
text = "000.001.200"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="PuntosSombra5" type="Label" parent="CanvasLayer/Puntos"]
self_modulate = Color(0, 0, 0, 1)
z_index = -65
z_as_relative = false
y_sort_enabled = true
texture_filter = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -158.0
offset_top = -30.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("11_uj6mw")
theme_override_font_sizes/font_size = 16
text = "000.001.200"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="MonedaInterfaz" type="TextureRect" parent="CanvasLayer"]
texture_filter = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -30.0
offset_right = 4.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(28, 30)
texture = ExtResource("12_br58p")

[node name="BolaInterfaz" type="TextureRect" parent="CanvasLayer"]
texture_filter = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -34.0
offset_right = 32.0
offset_bottom = -4.0
grow_vertical = 0
pivot_offset = Vector2(-2, 33.98)
texture = ExtResource("12_dprqm")

[node name="NumBolas" type="Label" parent="CanvasLayer/BolaInterfaz"]
z_index = 1
layout_mode = 0
offset_left = 34.405
offset_top = 8.0
offset_right = 74.405
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("13_iew4x")
text = "00"

[node name="NumBolasSombra" type="Label" parent="CanvasLayer/BolaInterfaz/NumBolas"]
self_modulate = Color(0, 0, 0, 1)
z_index = -6
layout_mode = 0
offset_left = -1.0
offset_right = 39.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("13_iew4x")
text = "00"

[node name="NumBolasSombra2" type="Label" parent="CanvasLayer/BolaInterfaz/NumBolas"]
self_modulate = Color(0, 0, 0, 1)
z_index = -7
layout_mode = 0
offset_left = 1.0
offset_right = 41.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("13_iew4x")
text = "00"

[node name="NumBolasSombra3" type="Label" parent="CanvasLayer/BolaInterfaz/NumBolas"]
self_modulate = Color(0, 0, 0, 1)
z_index = -8
layout_mode = 0
offset_top = -1.0
offset_right = 40.0
offset_bottom = 22.0
theme_override_fonts/font = ExtResource("13_iew4x")
text = "00"

[node name="NumBolasSombra4" type="Label" parent="CanvasLayer/BolaInterfaz/NumBolas"]
self_modulate = Color(0, 0, 0, 1)
z_index = -9
layout_mode = 0
offset_top = 1.0
offset_right = 40.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("13_iew4x")
text = "00"

[node name="NumBolasSombra5" type="Label" parent="CanvasLayer/BolaInterfaz/NumBolas"]
self_modulate = Color(0, 0, 0, 1)
z_index = -10
y_sort_enabled = true
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 43.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("13_iew4x")
text = "00"

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
z_index = 65
script = ExtResource("1_qkg2u")

[node name="PanelSoltarBola" type="Node2D" parent="."]
unique_name_in_owner = true
process_mode = 1

[node name="PanelTactilIzq" type="Sprite2D" parent="PanelSoltarBola"]
self_modulate = Color(0, 0, 1, 0.345098)
texture_filter = 3
position = Vector2(-176, 168)
texture = ExtResource("16_vppab")
script = ExtResource("17_gb88t")

[node name="PanelTactilDer" type="Sprite2D" parent="PanelSoltarBola"]
self_modulate = Color(0, 0, 1, 0.345098)
texture_filter = 3
position = Vector2(176, 168)
texture = ExtResource("16_vppab")
flip_h = true
script = ExtResource("17_gb88t")

[node name="DedoIzq" type="AnimatedSprite2D" parent="PanelSoltarBola"]
z_index = 150
texture_filter = 3
position = Vector2(-176, 104)
sprite_frames = SubResource("SpriteFrames_1qykj")
autoplay = "default"
frame = 1
frame_progress = 0.137289

[node name="DedoIzqSombra" type="AnimatedSprite2D" parent="PanelSoltarBola/DedoIzq"]
self_modulate = Color(0, 0, 0, 0.313726)
z_index = -15
texture_filter = 3
position = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_1qykj")
autoplay = "default"
frame = 1
frame_progress = 0.137289
script = ExtResource("19_b8cp1")

[node name="DedoIzq2" type="AnimatedSprite2D" parent="PanelSoltarBola"]
z_index = 150
texture_filter = 3
position = Vector2(176, 104)
sprite_frames = SubResource("SpriteFrames_1qykj")
autoplay = "default"
frame = 1
frame_progress = 0.137289

[node name="DedoIzqSombra" type="AnimatedSprite2D" parent="PanelSoltarBola/DedoIzq2"]
self_modulate = Color(0, 0, 0, 0.313726)
z_index = -15
texture_filter = 3
position = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_1qykj")
autoplay = "default"
frame = 1
frame_progress = 0.137289
script = ExtResource("19_b8cp1")
